syntax = "proto3";

option java_package = "enchantedtowers.common.utils.proto.responses";
option java_multiple_files = true;

package response_models;

// responses
import "responses/tower-enchantments-aggregation-response.proto";
import "responses/game-error.proto";

message AttackTowerResponse {
  response_models.TowerEnchantmentsAggregationResponse enchantments = 1;
  response_models.GameError error = 2;
};
